--- a/package.json
+++ b/package.json
@@ -76,5 +76,10 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "@azure/identity": "^4.4.0",
+    "@azure/msal-browser": "^3.19.1",
+    "@microsoft/microsoft-graph-client": "^3.0.7"
   }
 }
